# atsrs

./: .coveragerc  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/: SECURITY.md
.github/workflows/: ci.yml
atsrs/: __init__.py  _api.py
atsrs/tests/: test_atsrs.py
docs/: conf.py
