[metadata]
name = atsrs
url = https://github.com/Julian/atsrs
project_urls =
    Documentation = https://atsrs.readthedocs.io/en/latest/
    Source = https://github.com/Julian/atsrs
    Issues = https://github.com/Julian/atsrs/issues/
description =
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+atsrs@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    attrs
    tree-sitter
